Fixed visible logo

--- a/src/css/base-css-files/container.css
+++ b/src/css/base-css-files/container.css
@@ -14,7 +14,7 @@
 /* Styles for Desktop devices  */
 @media screen and (min-width: 1336px) {
   .container {
-    max-width: 1440px;
+    max-width: 1336px;
     padding: 0 64px;
   }
 }
